Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131972

error: no matching function for call to ‘TestNamespace::QString::arg(const char [], TestNamespace::QString)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P0: Blocker P0: Blocker
    • 6.9.0 Beta1, 6.10.0 FF
    • 6.9.0 FF
    • WebEngine
    • None
    • Linux/X11
    • bcc9b4dad (dev), a4622aead (6.9)

      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:203:47: error: no matching function for call to ‘TestNamespace::QString::arg(const char [], TestNamespace::QString)’
      agent:2024/12/08 06:18:18 build.go:404:   203 |             newUrl = QUrl(QString("%1:%2").arg(content::kViewSourceScheme, QString::fromStdString(strippedUrl.spec())));
      agent:2024/12/08 06:18:18 build.go:404:       |                           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2024/12/08 06:18:18 build.go:404: In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/install/include/QtCore/qlist.h:11,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/install/include/QtCore/qversionnumber.h:11,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/install/include/QtCore/qoperatingsystemversion.h:6,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/install/include/QtCore/6.9.0/QtCore/private/qglobal_p.h:62,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/qt/qtwebengine/src/core/api/qtwebenginecoreglobal_p.h:19,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/qt/qtwebengine_build/include/QtWebEngineCore/6.9.0/QtWebEngineCore/private/qtwebenginecoreglobal_p.h:1,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/qt/qtwebengine/src/core/web_contents_adapter_client.h:18,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.h:12,
      agent:2024/12/08 06:18:18 build.go:404:                  from /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:8:
      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/install/include/QtCore/qstring.h:316:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_convertible<T, long long unsigned int>, std::is_convertible<T, long long int> >, std::negation<std::disjunction<std::is_same<typename std::remove_cvref<_Tp>::type, TestNamespace::qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, TestNamespace::QAnyStringView> > > >, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(T, int, int, TestNamespace::QChar) const’
      agent:2024/12/08 06:18:18 build.go:404:   316 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
      agent:2024/12/08 06:18:18 build.go:404:       |                           ^~~
      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/install/include/QtCore/qstring.h:316:27: note:   template argument deduction/substitution failed:
      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/install/include/QtCore/qstring.h:315:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
      agent:2024/12/08 06:18:18 build.go:404:   315 |     template <typename T, if_integral_non_char<T> = true>
      agent:2024/12/08 06:18:18 build.go:404:       |                                                     ^~~~
      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/install/include/QtCore/qstring.h:331:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cvref<_Tp>::type, TestNamespace::qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(T, int, char, int, TestNamespace::QChar) const’
      agent:2024/12/08 06:18:18 build.go:404:   331 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
      agent:2024/12/08 06:18:18 build.go:404:       |                           ^~~
      agent:2024/12/08 06:18:18 build.go:404: /home/qt/work/install/include/QtCore/qstring.h:331:27: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h:330:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
        330 |     template <typename T, if_floating_point<T> = true>
            |                                                  ^~~~
      /home/qt/work/install/include/QtCore/qstring.h:336:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, TestNamespace::QAnyStringView> >::value, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(const T&, int, TestNamespace::QChar) const’
        336 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
            |                           ^~~
      /home/qt/work/install/include/QtCore/qstring.h:336:27: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h:335:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
        335 |     template <typename T, if_string_like<T> = true>
            |                                               ^~~~
      /home/qt/work/install/include/QtCore/qstring.h:356:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, TestNamespace::QAnyStringView> >...>), TestNamespace::QString>::type TestNamespace::QString::arg(Args&& ...) const’
        356 |     arg(Args &&...args) const
            |     ^~~
      /home/qt/work/install/include/QtCore/qstring.h:356:5: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, TestNamespace::QAnyStringView> >...>), TestNamespace::QString>::type TestNamespace::QString::arg(Args&& ...) const [with Args = {const char (&)[], TestNamespace::QString}]’:
      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:203:47:   required from here
      /home/qt/work/install/include/QtCore/qstring.h:356:5: error: no type named ‘type’ in ‘struct std::enable_if<false, TestNamespace::QString>’
      Sccache command failed, re-try calling build tool directly
      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp: In member function ‘TestNamespace::QUrl QtWebEngineCore::WebContentsDelegateQt::url(content::WebContents*) const’:
      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:203:47: error: no matching function for call to ‘TestNamespace::QString::arg(const char [], TestNamespace::QString)’
        203 |             newUrl = QUrl(QString("%1:%2").arg(content::kViewSourceScheme, QString::fromStdString(strippedUrl.spec())));
            |                           ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      In file included from /home/qt/work/install/include/QtCore/qhashfunctions.h:9,
                       from /home/qt/work/install/include/QtCore/qlist.h:11,
                       from /home/qt/work/install/include/QtCore/qversionnumber.h:11,
                       from /home/qt/work/install/include/QtCore/qoperatingsystemversion.h:6,
                       from /home/qt/work/install/include/QtCore/6.9.0/QtCore/private/qglobal_p.h:62,
                       from /home/qt/work/qt/qtwebengine/src/core/api/qtwebenginecoreglobal_p.h:19,
                       from /home/qt/work/qt/qtwebengine_build/include/QtWebEngineCore/6.9.0/QtWebEngineCore/private/qtwebenginecoreglobal_p.h:1,
                       from /home/qt/work/qt/qtwebengine/src/core/web_contents_adapter_client.h:18,
                       from /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.h:12,
                       from /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:8:
      /home/qt/work/install/include/QtCore/qstring.h:316:27: note: candidate: ‘template<class T, typename std::enable_if<conjunction_v<std::disjunction<std::is_convertible<T, long long unsigned int>, std::is_convertible<T, long long int> >, std::negation<std::disjunction<std::is_same<typename std::remove_cvref<_Tp>::type, TestNamespace::qfloat16>, std::is_floating_point<_Tp> > >, std::negation<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, TestNamespace::QAnyStringView> > > >, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(T, int, int, TestNamespace::QChar) const’
        316 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, int base = 10,
            |                           ^~~
      /home/qt/work/install/include/QtCore/qstring.h:316:27: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h:315:53: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
        315 |     template <typename T, if_integral_non_char<T> = true>
            |                                                     ^~~~
      /home/qt/work/install/include/QtCore/qstring.h:331:27: note: candidate: ‘template<class T, typename std::enable_if<std::disjunction<std::is_same<typename std::remove_cvref<_Tp>::type, TestNamespace::qfloat16>, std::is_floating_point<_Tp> >::value, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(T, int, char, int, TestNamespace::QChar) const’
        331 |     [[nodiscard]] QString arg(T a, int fieldWidth = 0, char format = 'g', int precision = -1,
            |                           ^~~
      /home/qt/work/install/include/QtCore/qstring.h:331:27: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h:330:50: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
        330 |     template <typename T, if_floating_point<T> = true>
            |                                                  ^~~~
      /home/qt/work/install/include/QtCore/qstring.h:336:27: note: candidate: ‘template<class T, typename std::enable_if<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv< <template-parameter-1-1> >::type> >, std::is_convertible<T, TestNamespace::QAnyStringView> >::value, bool>::type <anonymous> > TestNamespace::QString TestNamespace::QString::arg(const T&, int, TestNamespace::QChar) const’
        336 |     [[nodiscard]] QString arg(const T &a, int fieldWidth = 0, QChar fillChar = u' ') const
            |                           ^~~
      /home/qt/work/install/include/QtCore/qstring.h:336:27: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h:335:47: error: no type named ‘type’ in ‘struct std::enable_if<false, bool>’
        335 |     template <typename T, if_string_like<T> = true>
            |                                               ^~~~
      /home/qt/work/install/include/QtCore/qstring.h:356:5: note: candidate: ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, TestNamespace::QAnyStringView> >...>), TestNamespace::QString>::type TestNamespace::QString::arg(Args&& ...) const’
        356 |     arg(Args &&...args) const
            |     ^~~
      /home/qt/work/install/include/QtCore/qstring.h:356:5: note:   template argument deduction/substitution failed:
      /home/qt/work/install/include/QtCore/qstring.h: In substitution of ‘template<class ... Args> typename std::enable_if<((sizeof... (Args) >= 2) && conjunction_v<std::conjunction<std::negation<TestNamespace::QtPrivate::treat_as_integral_arg<typename std::remove_cv<Args>::type> >, std::is_convertible<Args, TestNamespace::QAnyStringView> >...>), TestNamespace::QString>::type TestNamespace::QString::arg(Args&& ...) const [with Args = {const char (&)[], TestNamespace::QString}]’:
      /home/qt/work/qt/qtwebengine/src/core/web_contents_delegate_qt.cpp:203:47:   required from here
      /home/qt/work/install/include/QtCore/qstring.h:356:5: error: no type named ‘type’ in ‘struct std::enable_if<false, TestNamespace::QString>’
      [22654/22655] CXX obj/QtWebEngineCore/web_contents_adapter.o
      FAILED: obj/QtWebEngineCore/web_contents_adapter.o 
      

      Build log: https://testresults.qt.io/logs/qt/qtwebengine/ff13c7a30b9a181a681a5874b9bb5915cf34f40f/LinuxUbuntu_22_04x86_64LinuxUbuntu_22_04x86_64GCCqtci-linux-Ubuntu-22.04-x86_64-51-5a3a11Sccache_StandaloneExamples_UseConfigure/a10084f32b8f8347c4f54f5dbf9f518ba5cad142/build_1733638234/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtwebengine/tasks/1733638232

      Tested changes (refs/builds/qtci/dev/1733637184):
      https://codereview.qt-project.org/c/qt/qtwebengine/+/609841/2 Update dependencies on 'dev' in qt/qtwebengine

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes