Call QString::fromUtf8 explicitly

This seems to have become necessary after recent changes in qtbase.

Fixes: QTBUG-131972
Task-number: QTBUG-112746
Change-Id: I29c89defe955f842ea3610498c2a13f03549fec8
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit bcc9b4dad4d99e88b2c037b597e4849816be8ba0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>